--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <div>
-    <a href="index.html"><img src="./images/logo1.png" class="rounded mx-auto d-block" alt="logo"></a>
+    <a href="index.html"><img src="./Images/logo1.png" class="rounded mx-auto d-block" alt="logo"></a>
   </div>
   <div>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
