--- a/Galleries.html
+++ b/Galleries.html
@@ -20,7 +20,7 @@
 
 <body>
   <div>
-    <a href="index.html"><img src="./images/logo1.png" class="rounded mx-auto d-block" alt="logo"></a>
+    <a href="index.html"><img src="./Images/logo1.png" class="rounded mx-auto d-block" alt="logo"></a>
   </div>
   <div>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
@@ -76,7 +76,7 @@
         <h5>Creating Khmer Children's Book.(Our team)</h5>
       </div>
       <div class=" col-3 mt-5">
-        <image src="./Images/im1.png" width="350px" length="350px"></image>
+        <image src="./Images/Im1.png" width="350px" length="350px"></image>
       </div>
     </div>
     <div class="row">
@@ -108,7 +108,7 @@
         <h5 class=" offset-2">Khmer MUN (Admin)</h5>
       </div>
       <div id= "im6-gall"class="col-5 mt-5">
-        <image id="im6"src="./Images/im6.png" width="370px" length="370px" alt=" logo"></image>
+        <image id="im6" src="./Images/Im6.png" width="370px" length="370px" alt=" logo"></image>
       </div>
     </div>
     <div class="row">
